--- a/frontend/src/app/exames/components/solicitar-exame/solicitar-exame.component.html
+++ b/frontend/src/app/exames/components/solicitar-exame/solicitar-exame.component.html
@@ -138,7 +138,7 @@
                                 [(ngModel)]="opcoesDeExameOuComparativo" 
                                 label="Comparativo"
                                 style="margin-right: 15px"></p-radioButton>
-                            </div>
+                            </div>solicitacao-exames
 
                         </div>
 
