--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -143,7 +143,7 @@
                                             formControlName="localExame"
                                             pTooltip="Digite o local da documentação do exame."
                                         />
-                                        <label>Local Doc Exame</label>
+                                        <label>Local Do Exame</label>
                                     </span>
                                 </div>
                                 <div class="p-md-6 p-sm-12">
