--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -1,178 +1,128 @@
 <div class="p-col-12 card card-w-title">
-    <h1>
-        Exames
-      </h1>
-    <div class="TableDiv">
-        <p-tabView class="tableContent">
-            <p-tabPanel header="por Exames">
-              <div class="container">
-                <span class="data-field-1">
-                  <p-radioButton
-                    class="radial-button"
-                    name="filter"
-                    label="Pesquisar pelo primeiro nome"
-                    value="firstName"
-                    [(ngModel)]="selectedValue"
-                  ></p-radioButton>
+  <h1>
+    Exames
+  </h1>
+  <div class="TableDiv">
 
-                  <p-radioButton
-                    class="radial-button"
-                    name="filter"
-                    label="Pesquisar pelo nome completo"
-                    value="fullName"
-                    [(ngModel)]="selectedValue"
-                  ></p-radioButton>
-                </span>
 
-                <span class="data-field-2">
+    <form [formGroup]="itemSolicitacao" (ngSubmit)="cadastrar()">
 
-                  <p-checkbox
-                    [(ngModel)]="unitCheckbox"
-                    label="Filtrar por unidade funcional"
-                    [binary]="true"
-                    pTooltip="Filtrar busca por exame disponíveis pela unidade funcional vinculada."
-                  ></p-checkbox>
+      <p-tabView class="tableContent">
+        <p-tabPanel header="por Exames">
+          <div class="container">
+            <span class="data-field-1">
+              <p-radioButton class="radial-button" name="filter" label="Pesquisar pelo primeiro nome" value="firstName"
+                [(ngModel)]="selectedValue"></p-radioButton>
 
-                  <label style="margin-bottom: 10px;">Exame:</label>
-                  <p-dropdown
-                    [(ngModel)]="selectedExam"
-                    [options]="exames"
-                    [optionLabel]="'nomeUsual'"
-                    [optionValue]="'id'"
-                    filter="true"
-                    placeholder="Buscar..."
-                  >
-                    <ng-template
-                      let-exames
-                      pTemplate="item"
-                    >
-                      <div *ngIf="exames.id == 1" style="width: 100%; display: flex; flex-direction: row; background-color: lightblue;">
-                        <span style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Nome Usual</span>
-                        <span style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Material</span>
-                        <span style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Amostra do Exame</span>
-                        <span style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Sigla</span>
-                        <span style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Nome do Exame</span>
-                      </div>
-                      <div style="width: 80vw; display: flex; flex-direction: row;">
-                        <span style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">{{exames.nomeUsual}}{{i}}</span>
-                        <span style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">teste</span>
-                        <span style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">teste</span>
-                        <span style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">{{exames.sigla}}</span>
-                        <span style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">{{exames.nome}}</span>
-                      </div>
-                    </ng-template>
-                  </p-dropdown>
-                </span>
+              <p-radioButton class="radial-button" name="filter" label="Pesquisar pelo nome completo" value="fullName"
+                [(ngModel)]="selectedValue"></p-radioButton>
+            </span>
 
-                <span class="data-field-3">
-                  <p-checkbox
-                    class="urgent-checkbox"
-                    [(ngModel)]="urgentCheck"
-                    label="Urgente"
-                    [binary]="true"
-                  ></p-checkbox>
+            <span class="data-field-2">
 
-                  <span class="calendar-div">
-                    Data/Hora programada:
-                    <p-calendar
-                      class="calendar-input"
-                      [(ngModel)]="date"
-                      showIcon="true"
-                      icon="pi pi-calendar"
-                      [readonlyInput]="true"
-                      showTime="true"
-                      dateFormat="dd/mm/yy"
-                    ></p-calendar>
-                  </span>
+              <p-checkbox [(ngModel)]="unitCheckbox" label="Filtrar por unidade funcional" [binary]="true"
+                pTooltip="Filtrar busca por exame disponíveis pela unidade funcional vinculada."></p-checkbox>
 
-                  <div class="dropdown-div">
-                    Situação:
-                    <p-dropdown
-                      [options]="situationDropdown"
-                      [(ngModel)]="selectedSituation"
-                    ></p-dropdown>
+              <label style="margin-bottom: 10px;">Exame:</label>
+              <p-dropdown [(ngModel)]="selectedExam" [options]="exames" [optionLabel]="'nomeUsual'" [optionValue]="'id'"
+                filter="true" placeholder="Buscar...">
+                <ng-template let-exames pTemplate="item">
+                  <div *ngIf="exames.id == 1"
+                    style="width: 100%; display: flex; flex-direction: row; background-color: lightblue;">
+                    <span
+                      style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Nome
+                      Usual</span>
+                    <span
+                      style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Material</span>
+                    <span
+                      style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Amostra
+                      do Exame</span>
+                    <span
+                      style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Sigla</span>
+                    <span
+                      style="font: size 4rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">Nome
+                      do Exame</span>
                   </div>
-                </span>
-              </div>
-
-              <button
-              pButton
-              label="Adicionar"
-              type="button"
-              icon="pi pi-plus"
-              iconPos="left"
-              (click)="handleClick()"
-            ></button>
-
-            </p-tabPanel>
-
-            <p-tabPanel header="por Lote">
-              <div class="container-2">
-                <div class="lote-title">
-                  Tipo do lote:
-                  <div class="lote-field-1">
-                    <p-radioButton
-                      class="radial-button"
-                      name="filter"
-                      label="Unidade"
-                      value="val1"
-                      [(ngModel)]="selectedLote"
-                    ></p-radioButton>
-
-                    <p-radioButton
-                      class="radial-button"
-                      name="filter"
-                      label="Grupo"
-                      value="val2"
-                      [(ngModel)]="selectedLote"
-                    ></p-radioButton>
-
-                    <p-radioButton
-                      class="radial-button"
-                      name="filter"
-                      label="Especialidade"
-                      value="val3"
-                      [(ngModel)]="selectedLote"
-                    ></p-radioButton>
+                  <div style="width: 80vw; display: flex; flex-direction: row;">
+                    <span
+                      style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">{{exames.nomeUsual}}{{i}}</span>
+                    <span
+                      style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">teste</span>
+                    <span
+                      style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">teste</span>
+                    <span
+                      style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">{{exames.sigla}}</span>
+                    <span
+                      style="font: size 3rem; width: 20%; text-overflow: ellipsis; overflow: hidden; text-align: center;">{{exames.nome}}</span>
                   </div>
-                </div>
-                <div class="lote-field-2">
-                  <label>Grupo:</label>
-                  <p-dropdown
-                    [options]="groups"
-                    [optionLabel]="'nome'"
-                    [optionValue]="'id'"
-                    [(ngModel)]="group"
-                    placeholder="Selecione um grupo"
-                  ></p-dropdown>
-                </div>
+                </ng-template>
+              </p-dropdown>
+            </span>
+
+            <span class="data-field-3">
+              <p-checkbox class="urgent-checkbox" 
+              [(ngModel)]="urgente" 
+              label="Urgente" 
+              [binary]="true"
+              formControlName="urgente"
+              ></p-checkbox>
+
+              <span class="calendar-div">
+                Data/Hora programada:
+                <p-calendar class="calendar-input" [(ngModel)]="date" showIcon="true" icon="pi pi-calendar"
+                  [readonlyInput]="true" showTime="true" dateFormat="dd/mm/yy" formControlName="dataProgramada"></p-calendar>
+              </span>
+
+              <div class="dropdown-div">
+                Situação:
+                <p-dropdown [options]="situationDropdown" [(ngModel)]="selectedSituation" formControlName="situacao"></p-dropdown>
               </div>
+            </span>
+          </div>
 
-              <app-exame *ngIf="group" [GrupoID]="group" (examesSelecionados)="examesSelecionados"></app-exame>
+          <button pButton label="Adicionar" type="submit" icon="pi pi-plus" iconPos="left"></button>
 
-              <app-situacao-exame *ngIf="group"></app-situacao-exame>
+        </p-tabPanel>
 
-              <button
-                pButton
-                label="Adicionar"
-                type="button" 
-                icon="pi pi-plus"
-                iconPos="left"
-                (click)="handleClick()"
-              ></button>
+        <p-tabPanel header="por Lote">
+          <div class="container-2">
+            <div class="lote-title">
+              Tipo do lote:
+              <div class="lote-field-1">
+                <p-radioButton class="radial-button" name="filter" label="Unidade" value="val1"
+                  [(ngModel)]="selectedLote"></p-radioButton>
 
-            </p-tabPanel>
+                <p-radioButton class="radial-button" name="filter" label="Grupo" value="val2"
+                  [(ngModel)]="selectedLote"></p-radioButton>
 
-            <app-tabela-exames></app-tabela-exames>
-            <button
-              pButton
-              label="Adicionar"
-              type="button"
-              icon="pi pi-plus"
-              iconPos="left"
-              (click)="handleClick()"
-            ></button>
+                <p-radioButton class="radial-button" name="filter" label="Especialidade" value="val3"
+                  [(ngModel)]="selectedLote"></p-radioButton>
+              </div>
+            </div>
+            <div class="lote-field-2">
+              <label>Grupo:</label>
+              <p-dropdown [options]="groups" [optionLabel]="'nome'" [optionValue]="'id'" [(ngModel)]="group"
+                placeholder="Selecione um grupo"></p-dropdown>
+            </div>
+          </div>
 
-        </p-tabView>
-    </div>
+          <app-exame *ngIf="group" [GrupoID]="group" (examesSelecionados)="examesSelecionados"></app-exame>
+
+          <app-situacao-exame *ngIf="group"></app-situacao-exame>
+
+          <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left"
+            (click)="handleClick()"></button>
+
+        </p-tabPanel>
+
+        <app-tabela-exames></app-tabela-exames>
+        <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left"
+          (click)="handleClick()"></button>
+
+      </p-tabView>
+
+    </form>
+
+
   </div>
+</div>
