passar exames do componente filho para o pai e tratamento de dados. - BASIS-206709
Signed-off-by: yukioz <yukio.link@gmail.com>

--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -114,6 +114,8 @@
             (click)="handleClick()"></button>
 
         </p-tabPanel>
+              <!-- Componente Exames -->
+              <app-exame *ngIf="group" [GrupoID]="group" (examesSelecionados)="examesSelecionados" (AoSelecionar)="receberExamesSelecionados($event)"></app-exame>
 
         <app-tabela-exames></app-tabela-exames>
         <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left"
@@ -122,7 +124,5 @@
       </p-tabView>
 
     </form>
-
-
   </div>
 </div>
