--- a/frontend/src/app/exames/components/exames/components/tabela-exames/tabela-exames.component.html
+++ b/frontend/src/app/exames/components/exames/components/tabela-exames/tabela-exames.component.html
@@ -1,6 +1,12 @@
 <div class="card">
-    <p-table #dt [rows]="10" [paginator]="true" [rowHover]="true" dataKey="id"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+    <p-table #dt [rows]="10"
+        [paginator]="true"
+        [rowHover]="true"
+        dataKey="id"
+        [value]="examesAdicionados"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [showCurrentPageReport]="true"
+    >
         <ng-template pTemplate="header">
             <tr>
                 <th> Nº </th>
@@ -12,17 +18,29 @@
                 <th> Ação</th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body">
+        <ng-template pTemplate="body" let-exame>
             <tr>
-                <td> teste 1</td>
+                <td> teste 1 </td>
                 <td> teste 2 </td>
                 <td> teste 3 </td>
                 <td> teste 4 </td>
                 <td> teste 5 </td>
                 <td> teste 6 </td>
-                <td>
-                    <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" (click)="editProduct(product)"></button>
-                    <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
+                <td style="display: flex; flex-direction: row;">
+                    <button
+                        pButton
+                        pRipple
+                        icon="pi pi-pencil"
+                        class="p-button-rounded p-button-success p-mr-2"
+                        (click)="editProduct(product)"
+                    ></button>
+                    <button
+                        pButton
+                        pRipple
+                        icon="pi pi-trash"
+                        class="p-button-rounded p-button-warning"
+                        (click)="deleteProduct(product)"
+                    ></button>
                 </td>
             </tr>
         </ng-template>
