--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -3,10 +3,6 @@
     Exames
   </h1>
   <div class="TableDiv">
-
-
-    <form [formGroup]="itemSolicitacao" (ngSubmit)="cadastrar()">
-
       <p-tabView class="tableContent">
         <p-tabPanel header="por Exames">
           <div class="container">
@@ -106,7 +102,7 @@
             </div>
           </div>
 
-          <app-exame *ngIf="group" [GrupoID]="group" (examesSelecionados)="examesSelecionados"></app-exame>
+          <app-exame *ngIf="group" [GrupoID]="group" (AoSelecionar)="receberExamesSelecionados($event)"></app-exame>
 
           <app-situacao-exame *ngIf="group"></app-situacao-exame>
 
@@ -114,15 +110,9 @@
             (click)="handleClick()"></button>
 
         </p-tabPanel>
-              <!-- Componente Exames -->
-              <app-exame *ngIf="group" [GrupoID]="group" (examesSelecionados)="examesSelecionados" (AoSelecionar)="receberExamesSelecionados($event)"></app-exame>
 
-        <app-tabela-exames></app-tabela-exames>
-        <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left"
-          (click)="handleClick()"></button>
+        <app-tabela-exames *ngIf="examesSelecionados.length > 0" [examesAdicionados]="examesSelecionados"></app-tabela-exames>
 
       </p-tabView>
-
-    </form>
   </div>
 </div>
