--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -20,8 +20,15 @@
                 pTooltip="Filtrar busca por exame disponíveis pela unidade funcional vinculada."></p-checkbox>
 
               <label style="margin-bottom: 10px;">Exame:</label>
-              <p-dropdown [(ngModel)]="selectedExam" [options]="exames" [optionLabel]="'nomeUsual'" [optionValue]="'id'"
-                filter="true" placeholder="Buscar...">
+              <p-dropdown [(ngModel)]="selectedExam" 
+                          [options]="exames" 
+                          [optionLabel]="'nomeUsual'" 
+                          [optionValue]="'id'"
+                          filter="true" 
+                          placeholder="Exame"
+                          formControlName="exameId">
+                          
+
                 <ng-template let-exames pTemplate="item">
                   <div *ngIf="exames.id == 1"
                     style="width: 100%; display: flex; flex-direction: row; background-color: lightblue;">
@@ -55,7 +62,7 @@
               </p-dropdown>
             </span>
 
-            <span class="data-field-3">
+            <span class="data-field-3" [formGroup]="itemSolicitacao">
               <p-checkbox class="urgent-checkbox" 
               [(ngModel)]="urgente" 
               label="Urgente" 
@@ -63,20 +70,20 @@
               formControlName="urgente"
               ></p-checkbox>
 
-              <span class="calendar-div">
+              <span class="calendar-div" [formGroup]="itemSolicitacao">
                 Data/Hora programada:
                 <p-calendar class="calendar-input" [(ngModel)]="date" showIcon="true" icon="pi pi-calendar"
                   [readonlyInput]="true" showTime="true" dateFormat="dd/mm/yy" formControlName="dataProgramada"></p-calendar>
               </span>
 
-              <div class="dropdown-div">
+              <div class="dropdown-div" [formGroup]="itemSolicitacao">
                 Situação:
                 <p-dropdown [options]="situationDropdown" [(ngModel)]="selectedSituation" formControlName="situacao"></p-dropdown>
               </div>
             </span>
           </div>
 
-          <button pButton label="Adicionar" type="submit" icon="pi pi-plus" iconPos="left"></button>
+          <button pButton label="Adicionar" type="submit" icon="pi pi-plus" iconPos="left" (click)="cadastrar()"></button>
 
         </p-tabPanel>
 
@@ -107,7 +114,7 @@
           <app-situacao-exame *ngIf="group"></app-situacao-exame>
 
           <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left"
-            (click)="handleClick()"></button>
+            (click)="cadastrar()"></button>
 
         </p-tabPanel>
 
