Corrigir dropdown dos exames por Grupo - BASIS-206709

--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -83,7 +83,8 @@
             </span>
           </div>
 
-          <button pButton label="Adicionar" type="submit" icon="pi pi-plus" iconPos="left" (click)="cadastrar()"></button>
+          <button pButton label="Adicionar" type="button" icon="pi pi-plus" iconPos="left" [disabled]="!valid()"
+            (click)="cadastrar()"></button>
 
         </p-tabPanel>
 
