--- a/frontend/src/app/exames/components/exames/components/situacao-exame/situacao-exame.component.html
+++ b/frontend/src/app/exames/components/exames/components/situacao-exame/situacao-exame.component.html
@@ -1,14 +1,15 @@
 <p-tabView class="tableContent">
     <p-tabPanel header="Situação">
-      <span class="data-field-3">
+      <span class="data-field-3" [formGroup]="itemSolicitacao">
         <p-checkbox
           class="urgent-checkbox"
           [(ngModel)]="urgentCheck"
           label="Urgente"
           [binary]="true"
+          formControlName="urgente"
         ></p-checkbox>
 
-        <span class="calendar-div">
+        <span class="calendar-div" [formGroup]="itemSolicitacao">
           Data/Hora programada:
           <p-calendar
             class="calendar-input"
@@ -18,15 +19,13 @@
             [readonlyInput]="true"
             showTime="true"
             dateFormat="dd/mm/yy"
+            formControlName="dataProgramada"
           ></p-calendar>
         </span>
 
-        <div class="dropdown-div">
+        <div class="dropdown-div" [formGroup]="itemSolicitacao">
           Situação:
-          <p-dropdown
-            [options]="situationDropdown"
-            [(ngModel)]="selectedSituation"
-          ></p-dropdown>
+          <p-dropdown [options]="situationDropdown" [(ngModel)]="selectedSituation" formControlName="situacao"></p-dropdown>
         </div>
       </span>
     </p-tabPanel>
