Melhorar a construção do FormGroup e relação dos componentes. - BASIS-206709
Signed-off-by: yukioz <yukio.link@gmail.com>

--- a/frontend/src/app/exames/components/exames/exames.component.scss
+++ b/frontend/src/app/exames/components/exames/exames.component.scss
@@ -87,3 +87,19 @@
   .radial-button {
     margin-right: 15px;
   }
+
+  .celula {
+    font: size 4rem;
+    width: 20%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+  }
+
+  .celulaContent {
+    font: size 3rem;
+    width: 20%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+  }
