--- a/frontend/src/app/exames/components/exames/components/tabela-exames/tabela-exames.component.html
+++ b/frontend/src/app/exames/components/exames/components/tabela-exames/tabela-exames.component.html
@@ -3,7 +3,7 @@
         [paginator]="true"
         [rowHover]="true"
         dataKey="id"
-        [value]="examesAdicionados"
+        [value]="itemsRecebidos"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
         [showCurrentPageReport]="true"
     >
@@ -18,14 +18,14 @@
                 <th> Ação</th>
             </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-exame>
+        <ng-template pTemplate="body" let-item>
             <tr>
                 <td> teste 1 </td>
-                <td> teste 2 </td>
+                <td> {{item.itemSolicitacaoExameId}} </td>
                 <td> teste 3 </td>
-                <td> teste 4 </td>
-                <td> teste 5 </td>
-                <td> teste 6 </td>
+                <td> {{item.urgente}} </td>
+                <td> {{item}} </td>
+                <td> {{item.situacao}} </td>
                 <td style="display: flex; flex-direction: row;">
                     <button
                         pButton
