--- a/frontend/src/app/exames/components/exames/exames.component.html
+++ b/frontend/src/app/exames/components/exames/exames.component.html
@@ -127,7 +127,7 @@
 
         </p-tabPanel>
 
-        <app-tabela-exames #tabelaExame *ngIf="itemsSolicitacaoExame.length > 0" [itemsRecebidos]="itemsSolicitacaoExame"></app-tabela-exames>
+        <app-tabela-exames #appTabela *ngIf="itemsSolicitacaoExame.length > 0" [itemsRecebidos]="itemsSolicitacaoExame"></app-tabela-exames>
 
       </p-tabView>
   </div>
